--- a/src/scouts.html
+++ b/src/scouts.html
@@ -87,16 +87,17 @@
     </div>
     </div>
     <script>
+        const waitMs = ms => new Promise(res => setTimeout(res, ms));
         function goToHome() {
             window.location.href = "/";
         }
-        function getTeamRanks() {
+        async function getTeamRanks() {
             document.getElementById("viewScoutsButton").innerHTML = "Requesting Data...";
             const xhr = new XMLHttpRequest();
             xhr.open("GET", `/api/scouts`, true);
             xhr.withCredentials = true;
 
-            xhr.onreadystatechange = () => {
+            xhr.onreadystatechange = async () => {
             if (xhr.readyState === XMLHttpRequest.DONE && xhr.status === 200) {
                 console.log("200 ok")
                 console.log(xhr.responseText)
@@ -109,6 +110,8 @@
             } else if (xhr.status === 401) {
                 console.log("401 failure")
                 document.getElementById("viewScoutsButton").innerHTML = "401 Unauthorized";
+                await waitMs(1000);
+                window.location.href = "/login";
             } else if (xhr.status === 400) {
                 console.log("400 failure")
                 document.getElementById("viewScoutsButton").innerHTML = "400 Bad Request";
