--- a/src/matches.html
+++ b/src/matches.html
@@ -56,17 +56,18 @@
     </div>
     </div>
     <script>
+        const waitMs = ms => new Promise(res => setTimeout(res, ms));
         function goToHome() {
             window.location.href = "/";
         }
-        function getMatches() {
+        async function getMatches() {
             eventCode = document.getElementById("eventCode").value
             document.getElementById("viewMatchButton").innerHTML = "Requesting Data...";
             const xhr = new XMLHttpRequest();
             xhr.open("GET", `/api/matches/2023/${eventCode}/qual`, true);
             xhr.withCredentials = true;
 
-            xhr.onreadystatechange = () => {
+            xhr.onreadystatechange = async () => {
             if (xhr.readyState === XMLHttpRequest.DONE && xhr.status === 200) {
                 console.log("200 ok")
                 console.log(xhr.responseText)
@@ -78,6 +79,8 @@
             } else if (xhr.status === 401) {
                 console.log("401 failure")
                 document.getElementById("viewMatchButton").innerHTML = "401 Unauthorized";
+                await waitMs(1000);
+                window.location.href = "/login";
             } else if (xhr.status === 400) {
                 console.log("400 failure")
                 document.getElementById("viewMatchButton").innerHTML = "400 Bad Request";
