--- a/src/teams.html
+++ b/src/teams.html
@@ -95,17 +95,18 @@
     </div>
     </div>
     <script>
+        const waitMs = ms => new Promise(res => setTimeout(res, ms));
         function goToHome() {
             window.location.href = "/";
         }
-        function getTeamRanks() {
+        async function getTeamRanks() {
             eventCode = document.getElementById("eventCode").value
             document.getElementById("viewTeamsButton").innerHTML = "Requesting Data...";
             const xhr = new XMLHttpRequest();
             xhr.open("GET", `/api/teams/2023/${eventCode}`, true);
             xhr.withCredentials = true;
 
-            xhr.onreadystatechange = () => {
+            xhr.onreadystatechange = async () => {
             if (xhr.readyState === XMLHttpRequest.DONE && xhr.status === 200) {
                 console.log("200 ok")
                 console.log(xhr.responseText)
@@ -118,6 +119,8 @@
             } else if (xhr.status === 401) {
                 console.log("401 failure")
                 document.getElementById("viewTeamsButton").innerHTML = "401 Unauthorized";
+                await waitMs(1000);
+                window.location.href = "/login";
             } else if (xhr.status === 400) {
                 console.log("400 failure")
                 document.getElementById("viewTeamsButton").innerHTML = "400 Bad Request";
