add to points page

--- a/src/points.html
+++ b/src/points.html
@@ -46,8 +46,9 @@
         <form>
             <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP℠</span></h1>
             <div style="display: flex; flex-direction: column;">
-                <a href="shop" class="gameflair1" style="margin-bottom: 5%;">Item Shop<br></a>
-                <a href="blackjack" class="gameflair1" style="margin-bottom: 5%;">Blackjack<br></a>
+                <a href="shop" class="gameflair1" style="margin-bottom: 5%;">Item Shop</a><br>
+                <a href="blackjack" class="gameflair1" style="margin-bottom: 5%;">Blackjack</a><br>
+                <a href="spin" class="gameflair1" style="margin-bottom: 5%;">spin thing</a><br>
             </div>
             <br><br>
             <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem;; border-style: solid; border-color: #FFB600; border-width: 0.875rem;; margin-top: 1rem;" onclick="goToHome()">Back</button>
