--- a/src/pit.html
+++ b/src/pit.html
@@ -26,7 +26,7 @@
                 <input type="text" value="pit" name="formType" hidden>
                 <br>
                 <h2 class="gameflair1">General Info</h2>
-                <small><a href="topitscout" style="all: unset;">Top Scouts</a></small><br>
+                <small><a href="topitscout" style="all: unset;">Teams to scout</a></small><br><br>
                 <fieldset>
                     <label>Event Code</label><br>
                     <select name="event">
