--- a/src/points.html
+++ b/src/points.html
@@ -46,7 +46,7 @@
         <form>
             <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP℠</span></h1>
             <div style="display: flex; flex-direction: column;">
-                <a href="shop" class="gameflair1" style="margin-bottom: 5%;">Item Shop</a><br>
+                <!--<a href="shop" class="gameflair1" style="margin-bottom: 5%;">Item Shop</a><br>-->
                 <a href="blackjack" class="gameflair1" style="margin-bottom: 5%;">Blackjack</a><br>
                 <a href="spin" class="gameflair1" style="margin-bottom: 5%;">spin thing</a><br>
             </div>
