--- a/src/spin.html
+++ b/src/spin.html
@@ -11,6 +11,7 @@
     <meta name="apple-mobile-web-app-title" content="Scouting">
     <link rel="manifest" href="/app.webmanifest"/>
     <link rel="stylesheet" href="float.min.css" type="text/css">
+    <link rel="stylesheet" href="assets/spin.css" type="text/css">
     <meta name="mobile-web-app-capable" content="yes">
     <script src="form.min.js"></script>
     <style>
@@ -37,8 +38,6 @@
             image-rendering: -moz-crisp-edges;
             image-rendering: crisp-edges;
         }
-        /* animation css */
-        @-webkit-keyframes spin0{2%{-webkit-transform:rotate(360deg)}100%{-webkit-transform:rotate(21600deg)}}@-webkit-keyframes spin1{2%{-webkit-transform:rotate(360deg)}100%{-webkit-transform:rotate(21630deg)}}@-webkit-keyframes spin2{2%{-webkit-transform:rotate(360deg)}100%{-webkit-transform:rotate(21660deg)}}@-webkit-keyframes spin3{2%{-webkit-transform:rotate(360deg)}100%{-webkit-transform:rotate(21690deg)}}@-webkit-keyframes spin4{2%{-webkit-transform:rotate(360deg)}100%{-webkit-transform:rotate(21720deg)}}@-webkit-keyframes spin5{2%{-webkit-transform:rotate(360deg)}100%{-webkit-transform:rotate(21750deg)}}@-webkit-keyframes spin6{2%{-webkit-transform:rotate(360deg)}100%{-webkit-transform:rotate(21780deg)}}@-webkit-keyframes spin7{2%{-webkit-transform:rotate(360deg)}100%{-webkit-transform:rotate(21810deg)}}@-webkit-keyframes spin8{2%{-webkit-transform:rotate(360deg)}100%{-webkit-transform:rotate(21840deg)}}@-webkit-keyframes spin9{2%{-webkit-transform:rotate(360deg)}100%{-webkit-transform:rotate(21870deg)}}@-webkit-keyframes spin10{2%{-webkit-transform:rotate(360deg)}100%{-webkit-transform:rotate(21900deg)}}@-webkit-keyframes spin11{2%{-webkit-transform:rotate(360deg)}100%{-webkit-transform:rotate(21930deg)}}.spinc11{-webkit-animation-name:spin0;-webkit-animation-duration:8s;-webkit-animation-fill-mode:forwards}.spinc10{-webkit-animation-name:spin1;-webkit-animation-duration:8s;-webkit-animation-fill-mode:forwards}.spinc9{-webkit-animation-name:spin2;-webkit-animation-duration:8s;-webkit-animation-fill-mode:forwards}.spinc8{-webkit-animation-name:spin3;-webkit-animation-duration:8s;-webkit-animation-fill-mode:forwards}.spinc7{-webkit-animation-name:spin4;-webkit-animation-duration:8s;-webkit-animation-fill-mode:forwards}.spinc6{-webkit-animation-name:spin5;-webkit-animation-duration:8s;-webkit-animation-fill-mode:forwards}.spinc5{-webkit-animation-name:spin6;-webkit-animation-duration:8s;-webkit-animation-fill-mode:forwards}.spinc4{-webkit-animation-name:spin7;-webkit-animation-duration:8s;-webkit-animation-fill-mode:forwards}.spinc3{-webkit-animation-name:spin8;-webkit-animation-duration:8s;-webkit-animation-fill-mode:forwards}.spinc2{-webkit-animation-name:spin9;-webkit-animation-duration:8s;-webkit-animation-fill-mode:forwards}.spinc1{-webkit-animation-name:spin10;-webkit-animation-duration:8s;-webkit-animation-fill-mode:forwards}.spinc0{-webkit-animation-name:spin11;-webkit-animation-duration:8s;-webkit-animation-fill-mode:forwards}
     </style>
 </head>
 
