--- a/src/spin.html
+++ b/src/spin.html
@@ -92,6 +92,9 @@
                 } else if (xhr.status === 500) {
                     console.log("500 failure")
                     return "500";
+                } else if (xhr.status === 403) {
+                    console.log("403 access denied")
+                    document.getElementById('result').innerHTML = 'You have a balance of under -2000 points, you cannot gamble!'
                 } else {
                     console.log("awaiting response")
                 }
