--- a/src/pit.html
+++ b/src/pit.html
@@ -93,7 +93,7 @@
                 </fieldset>
 
                 <fieldset>
-                    <label>Images</label><br>
+                    <label>Images of ROBOT</label><br>
                     <label>Image 1 - <strong>FRONT</strong></label>
                     <input type="file" name="image1" accept="image/png, image/jpeg" required><br>
                     <label>Image 2 - <strong>BACK</strong></label>
