--- a/src/notes.html
+++ b/src/notes.html
@@ -58,7 +58,7 @@
         </div>
         <br><br>
     </div>
-    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js" crossorigin="anonymous"></script>
     <script>
         window.currentEvent = 0;
         window.currentTeam = 0;
