--- a/src/notes.html
+++ b/src/notes.html
@@ -16,7 +16,7 @@
     <link rel="manifest" href="/app.webmanifest"/>
     <link rel="apple-touch-startup-image" href="public/launch.png">
     <script src="form.min.js"></script>
-    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet" crossorigin="anonymous">
     <style>
         a,a:visited {
             text-align: center;
