--- a/src/notes.html
+++ b/src/notes.html
@@ -103,6 +103,33 @@
             } else if (xhr.status === 500) {
                 console.log("500 failure")
                 document.getElementById("viewNoteButton").innerHTML = "500 Internal Server Error";
+                if (xhr.responseText == "none") {
+                        const newxhr = new XMLHttpRequest();
+                        newxhr.open("GET", `/api/notes/${eventCode}/${teamNumber}/getNotes`, true);
+                        newxhr.withCredentials = true;
+
+                        newxhr.onreadystatechange = async () => {
+                        if (newxhr.readyState === XMLHttpRequest.DONE && newxhr.status === 200) {
+                            getNote()
+                        } else if (newxhr.status === 401) {
+                            console.log("401 failure")
+                            document.getElementById("viewNoteButton").innerHTML = "401 Unauthorized";
+                            await waitMs(1000);
+                            window.location.href = "/login";
+                        } else if (newxhr.status === 400) {
+                            console.log("400 failure")
+                            document.getElementById("viewNoteButton").innerHTML = "400 Bad Request";
+                        } else if (newxhr.status === 500) {
+                            console.log("500 failure")
+                            document.getElementById("viewNoteButton").innerHTML = "500 Internal Server Error";
+                        } else {
+                            console.log("awaiting response")
+                            document.getElementById("viewNoteButton").innerHTML = "Downloading Data...";
+                        }
+                        }
+
+                        xhr.send()
+                }
             } else if (xhr.status === 403 && xhr.readyState === XMLHttpRequest.DONE) {
                 if (xhr.responseText == "none") {
                         const newxhr = new XMLHttpRequest();
